--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,7 +26,7 @@
       <li class="menu-text">Billeterie officielle</li>
     </ul>
   </div>
-  <div class="top-bar-right">
+  <div class="top-bar-right nonPrintable">
     <ul class="dropdown menu" data-dropdown-menu>
     <li>
         <a href="#" class="button dropdown">Select language</a>
