--- a/app/Resources/views/email/bill.html.twig
+++ b/app/Resources/views/email/bill.html.twig
@@ -1429,9 +1429,9 @@
                                                 </th></tr></table></th>
                                     <th class="small-12 large-3 columns"><table><tr><th>
                                                     <p class="text-center">
-                                                        {#{% image 'images/jpg/logo-louvre.jpg' %}
+                                                        {% image 'images/jpg/logo-louvre.jpg' %}
                                                         <img src="{{ asset_url }}" alt="Logo du Louvre" />
-                                                        {% endimage %}#}
+                                                        {% endimage %}
                                                        <br>
                                                     </p>
                                                 </th></tr></table></th>
