--- a/app/Resources/views/pages/index.html.twig
+++ b/app/Resources/views/pages/index.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
-{% block title %}{{ 'homepageTitle'|trans }}{% endblock %}
+{% block title %}{{ 'home.title'|trans }}{% endblock %}
 {% block body %}
 <div class="large-12 columns text-center">
-    <h1>{{ 'schedulesPrices'|trans }}</h1>
+    <h1>{{ 'home.schedulesPrices'|trans }}</h1>
     <h1>Alerte attentat - Vigipirate</h1>
     {% image 'images/jpg/louvre-logo-vigipirate-2017.jpg' %}
         <img src="{{ asset_url }}" alt="Example" />
