--- a/app/Resources/views/foundation_6_layout.html.twig
+++ b/app/Resources/views/foundation_6_layout.html.twig
@@ -318,11 +318,11 @@
 
 {% block form_errors -%}
     {% if errors|length > 0 -%}
-        {% if form.parent %}<small class="error">{% else %}<div data-alert class="alert callout">{% endif %}
+        {% if form.parent %}<span class="form-error is-visible">{% else %}<div data-alert class="alert callout">{% endif %}
         {%- for error in errors -%}
             {{ error.message }}
             {% if not loop.last %}, {% endif %}
         {%- endfor -%}
-        {% if form.parent %}</small>{% else %}</div>{% endif %}
+        {% if form.parent %}</span>{% else %}</div>{% endif %}
     {%- endif %}
 {%- endblock form_errors %}
