--- a/app/Resources/views/pages/index.html.twig
+++ b/app/Resources/views/pages/index.html.twig
@@ -69,7 +69,7 @@ En cas d’incident, il faut d’abord s’échapper de la zone de danger, alert
             </tr>
         </tbody>
     </table>
-    <p>Passer 14h seul le tarif à la demi-journée s'applique.</p>
+    <p>Les billets demi-journée ne permette qu'un accès au musée à partir de 14h.</p>
     <a href="{{path('step1')}}" class="button">Réserver vos billets</a>
 </div>
 {% endblock %}
