--- a/app/Resources/views/pages/step3.html.twig
+++ b/app/Resources/views/pages/step3.html.twig
@@ -34,7 +34,7 @@
         <tr>
           <td>{{ ticket.firstname }}</td>
           <td>{{ ticket.lastname }}</td>
-          <td>{{ ticket.dateOfBirth }}</td>
+          <td>{{ ticket.dateOfBirth | date('d/m/Y')}}</td>
           <td>{{ ticket.priceType|trans }}</td>
           <td>{{ ticket.price }}.00 €</td>
 
